# neural-network-rg-flow

./: MachineLearning-RG-Flow.sln
CudaTest/: CudaTest.vcxproj  CudaTest.vcxproj.filters  Ising1D.cpp  Ising1D.h  LatticeObject.cpp  LatticeObject.h  RBM.cu  RBM.cuh  kernel.cu  rbm_helpers.cu  rbm_helpers.cuh  spins.csv  utils.cuh
RBMCPU/: Add.cpp  Add.h  AnalyticalTest.cpp  AnalyticalTest.h  Benchmark.hpp  CMakeLists.txt  CheatCD.cpp  CheatCD.h  CompareDistributions.cpp  CompareDistributions.h  Config.cpp  Config.h  ContrastiveDivergence.cpp  ContrastiveDivergence.h  ContrastiveDivergence2D.cpp  ContrastiveDivergence2D.h  CustomRBM.cpp  CustomRBM.h  DBM.cpp  DBM.h  DBMTest.cpp  DBMTest.h  ErrorAnalysis.cpp  ErrorAnalysis.h  FFT.cpp  FFT.h  FFTTest.cpp  FFTTest.h  Graph.cpp  Graph.h  MNISTData.cpp  MNISTData.h  MNISTTest.cpp  MNISTTest.h  ModCD.cpp  ModCD.h  Node.cpp  Node.h  NormalizationTests.cpp  NormalizationTests.h  (+641 more)
RBMTests/: RBMTests.cpp  RBMTests.vcxproj  RBMTests.vcxproj.filters  stdafx.cpp
bube/: bube.vcxproj
